--- a/nosotros.html
+++ b/nosotros.html
@@ -16,7 +16,7 @@
 		
 			<div class="logo">
 				<img src="img/logo.png" width="100" alt="Transportes X">
-				<h1>Transportes X</h1>
+				<h1>Transportes 2019</h1>
 			</div> 
 <!-- 		<div>
 			Para logos
